# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  check.sh  configuration.yml  init.sh  inoticargo  run.sh  rustfmt.toml  sqlx-data.json  test.sh
migrations/: 20210829140226_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
